サイドバー部分テンプレート化

--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -18,50 +18,10 @@
       a, a:visited, a:focus, a:hover {
         text-decoration: none;
       }
-      /* main container background */
-      .main-content-container {
+      /* background */
+      .total {
         background-image: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
       }
-      /* Chart.js */
-      /* @-webkit-keyframes chartjs-render-animation {
-        from{opacity:0.99}to{opacity:1}
-      }
-      @keyframes chartjs-render-animation {
-        from{opacity:0.99}to{opacity:1}
-      }
-      .chartjs-render-monitor {
-        -webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;
-      } */
-      /* sidebar */
-      .nav-link {
-        color: black;
-      }
-      .nav-link:hover {
-        color: #F9C80E;
-      }
-.tw-share-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 5em;
-  height: 2em;
-  /* padding: 0.3em; */
-  margin: 1em 0 2em 0;
-  text-decoration: none;
-  background: #55acee;
-  border-radius: 3px;
-}
-.fa-twitter { 
-  margin: 0;
-  font-size: 0.9em;
-  color: #fff;
-  min-width: 15px;
-}
-.tw-text {
-  font-size: 0.6em;
-  color: #fff;
-  margin: 0;
-}
       /* welcome 見出し */
       .welcome-top {
         position: absolute;
@@ -204,7 +164,6 @@
       .box-p4 {
         font-size: 50px;
       }
-
     </style>
   </head>
   <body>
@@ -229,47 +188,11 @@
       <div class="container-fluid">
         <div class="row">
         <%# sidebar %>
-        <aside class="main-sidebar col-md-3 col-lg-2 px-20 border-end">
-          <div class="nav-wrapper">
-            <ul class="nav flex-column">
-              <li class="nav-item border-bottom py-3">
-                <a class="nav-link" href="/money/new">
-                  <span data-feather="plus-circle"></span>
-                  Today's Record
-                </a>
-              </li>
-              <li class="nav-item border-bottom py-3">
-                <a class="nav-link" href="/money/show">
-                  <span data-feather="dollar-sign"></span>
-                  Money Record
-                </a>
-              </li>
-              <li class="nav-item border-bottom py-3">
-                <a class="nav-link" href="/bodies/show">
-                  <span data-feather="bar-chart-2"></span>
-                  Weight Record
-                </a>
-              </li>
-              <li class="nav-item border-bottom py-3">
-                <a class="nav-link" href="/money">
-                  <span data-feather="home"></span>
-                  Top Page
-                </a>
-              </li>
-              <div class="tw-share-button">
-                <i class="fab fa-twitter"></i>
-                <%= link_to "ツイート", "http://twitter.com/intent/tweet?text=#{Date.today.month}月#{Date.today.day}日の記録&hashtags=食べたつもり貯金", class:"tw-text", target:'_blank' %>
-              </div>
-              <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large">
-                <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">シェア</a>
-              </div>
-            </ul>
-          </div>
-        </aside>
+        <%= render 'shared/sidebar' %>
 
         <%# main-content %>
-        <main class="main-content col-lg-10 col-md-9 col-sm-12">
-          <div class="main-content-container container-fluid py-5 px-3">
+        <main class="total main-content col-lg-10 col-md-9 col-sm-12">
+          <div class="py-5 px-3">
             <div class="row">
             <% @goal.each do |goal| %>
               <div class="col-12 d-flex">
@@ -357,12 +280,6 @@
         </div>
       </div>
     <% end %>
-
-    <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-    <script>
-      feather.replace()
-    </script>
 
 
     <%# <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
