--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -213,8 +213,8 @@
                   <div class="card-body d-flex">
                     <div class="row">
                       <div class="col py-3">
-                        <div class="h2 card-title mb-5 text-muted"><i class="money-title fas fa-comment-dollar"></i>Saving Money</div>
-                        <h3 class="card-title text-muted">Total</h3>
+                        <div class="h2 card-title mb-5 text-muted"><i class="money-title fas fa-comment-dollar"></i>Money</div>
+                        <h3 class="card-title text-muted">現在の合計金額</h3>
                         <div class="box">
                           <div class="h1 font-weight-bold mb-3">￥<%= Money.sumprice %></div>
                           <div class="hitokoto">
@@ -224,7 +224,7 @@
                               <p class="box-p4"><span class="box-p3"><%= Money.umai %></span>本分です</p>
                           </div>
                         </div>
-                        <h3 class="card-title text-muted">Goal</h3>
+                        <h3 class="card-title text-muted">目標</h3>
                         <div class="h1 font-weight-bold">￥<%= goal.saving_goal %></div>
                       </div>
                     </div>
@@ -237,7 +237,7 @@
                   <div class="card-body d-flex">
                     <div class="row m-auto">
                       <div class="col">
-                        <div class="h2 card-title text-muted"><i class="money-title fas fa-comment-dollar"></i>Saving Money</div>
+                        <div class="h2 card-title text-muted"><i class="money-title fas fa-comment-dollar"></i>Money</div>
                         <%= column_chart @money.group_by_day(:created_at, last: 7).sum(:saving_amount), xtitle: "日付", ytitle: "貯金額(円)", colors: ["#FFD700"], width: "500px" %>
                       </div>
                     </div>
@@ -250,7 +250,7 @@
                   <div class="card-body d-flex">
                     <div class="row m-auto">
                       <div class="col">
-                        <div class="h2 card-title text-muted"><i class="weight-title fas fa-weight"></i>Lose Weight</div>
+                        <div class="h2 card-title text-muted"><i class="weight-title fas fa-weight"></i>Weight</div>
                         <%= area_chart @bodies.group_by_day(:created_at, last: 7).sum(:weight), xtitle: "日付", ytitle: "体重(KG)", colors: ["#3CB371"], width: "500px" %>
                       </div>
                     </div>
@@ -263,11 +263,22 @@
                   <div class="card-body d-flex">
                     <div class="row">
                       <div class="col py-3">
-                        <div class="h2 card-title mb-5 text-muted"><i class="weight-title fas fa-weight"></i>Lose Weight</div>
-                        <h3 class="card-title text-muted">My weight</h3>
-                        <div class="h1 font-weight-bold mb-3"><%= Body.recentweight %>KG</div>
-                        <h3 class="card-title text-muted">Goal</h3>
-                        <div class="h1 font-weight-bold"><%= goal.weight_goal %>KG</div>
+                        <div class="h2 card-title mb-5 text-muted"><i class="weight-title fas fa-weight"></i>Weight</div>
+                        <h3 class="card-title text-muted">現在の体重</h3>
+                        <div class="d-flex">
+                          <div class="weight-flex mr-3">
+                            <div class="h1 font-weight-bold mb-3"><%= Body.recentweight %>kg</div>
+                          </div>
+                          <div class="weight-flex pt-3 h5 text-success">
+                            <div class="mb-3">
+                              (目標まで残り
+                              <% forpoal = goal.weight_goal - Body.recentweight %>
+                              <%= forpoal %>kg)
+                            </div>
+                          </div>
+                        </div>
+                        <h3 class="card-title text-muted">目標</h3>
+                        <div class="h1 font-weight-bold"><%= goal.weight_goal %>kg</div>
                       </div>
                     </div>
                   </div>
