--- a/app/views/bodies/show.html.erb
+++ b/app/views/bodies/show.html.erb
@@ -2,6 +2,33 @@
   .total {
     height: 100vh;
   }
+  .weight-title {
+    color: #FF7C00;
+    background: -webkit-linear-gradient(top, #deecdd 0%, #2af598 50%, #2af598 51%, #2af598 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .anime-text {
+    animation: poyoyon 0.5s cubic-bezier(0.12, 0, 0.39, 0) 1 forwards;
+  }
+  @keyframes poyoyon {
+    0% {
+      transform: translateX(140px);
+      opacity: 0;
+    }
+    50% {
+      transform: translateX(0);
+    }
+    65% {
+      transform: translateX(30px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+    20%,100% {
+      opacity: 1;
+    }
+  }
 </style>
 <%= render 'shared/header' %>
 
@@ -12,9 +39,8 @@
   
     <main class="total main-content col-lg-10 col-md-9 col-sm-12">
       <div class="main-content-container py-5 px-3">
-
-        <div class="row">
-          <h1 class="mt-3 text-center">今まで体重記録一覧</h1>
+        <div class="row d-flex mb-3">
+          <h1 class="anime-text mt-3 text-center"><i class="weight-title fas fa-weight"></i>今までの体重記録一覧</h1>
         </div>
 
         <div class="row">
