--- a/app/views/money/lp.html.erb
+++ b/app/views/money/lp.html.erb
@@ -4,8 +4,8 @@
     <title>First Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link href="carousel.css" rel="stylesheet">
-    <link href="../example.css" rel="stylesheet">
+    <%# <link href="carousel.css" rel="stylesheet">
+    <link href="../example.css" rel="stylesheet"> %>
     <script src="https://kit.fontawesome.com/81c73138ec.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Serif+JP:wght@900&display=swap" rel="stylesheet">
@@ -213,7 +213,7 @@
       <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">プライバシー</a> &middot; <a href="#">利用規約</a></p>
     </footer> %>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <%# <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script>
       window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script><script src="/docs/4.5/assets/js/vendor/anchor.min.js"></script>
@@ -221,6 +221,6 @@
     <script src="/docs/4.5/assets/js/vendor/bs-custom-file-input.min.js"></script>
     <script src="/docs/4.5/assets/js/src/application.js"></script>
     <script src="/docs/4.5/assets/js/src/search.js"></script>
-    <script src="/docs/4.5/assets/js/src/ie-emulation-modes-warning.js"></script>
+    <script src="/docs/4.5/assets/js/src/ie-emulation-modes-warning.js"></script> %>
   </body>
 </html>
